--- a/bakka/fem-pa-bakka/katFemBakka.html
+++ b/bakka/fem-pa-bakka/katFemBakka.html
@@ -82,7 +82,7 @@
 
 
 
-    <!-- HEADER -->
+    <!--* HEADER -->
     <div class="header fullWidth"> 
         <div class="headImg">
             <img src="../../hovedBilder/pc/pc-paBakka-hovedbilde.png" alt="" style="height: 100%;">
@@ -152,7 +152,7 @@
 
         <!--* siste nytt -->
         <div class="latestNewsBox pic">
-            <div class="overskriftTekst"><b>Siste 5 på Bakka</b></div>
+            <div class="overskriftTekst"><b>Siste</b> 5 på Bakka</div>
             <div class="latestNewsBox-hiddencontent pic">
                 <img src="../../hovedBilder/pc/nyestArtikkelBildeoverlag/pc-graBildeoverlagNyeste.png" alt="" class="latestNewsOverlag">
                 <img src="../../hovedBilder/pc/nyestArtikkelBildeoverlag/pc-bildeoverlagNyeste-hover.png" alt="" class="latestNewsHover" style="width: 80%; position: absolute; bottom: 0px;">
@@ -186,7 +186,7 @@
 
         <!--* Artikklene -->
         <div class="gridContArticles" style="margin-top: 20vw;">
-            <div class="overskriftTekst"><b>Alle i 5 på Bakka</b></div>
+            <div class="overskriftTekst"><b>Alle</b> i 5 på Bakka</div>
 
             <div class="GridItemArtic pic"><div class="articBox pic">
                 <img src="" alt=""> <!--TODO Dette er bildet, OBS: Lag artikkelene til bildestørrelse -->
