--- a/bakka/pa-bakka.html
+++ b/bakka/pa-bakka.html
@@ -152,7 +152,7 @@
 
         <!--* siste nytt -->
         <div class="latestNewsBox pic">
-            <div class="overskriftTekst"><b>Siste nytt på Bakka</b></div>
+            <div class="overskriftTekst"><b>Siste nytt</b> på Bakka</div>
             <div class="latestNewsBox-hiddencontent pic">
                 <img src="../hovedBilder/pc/nyestArtikkelBildeoverlag/pc-graBildeoverlagNyeste.png" class="latestNewsOverlag" alt="">
                 <img src="../hovedBilder/pc/nyestArtikkelBildeoverlag/pc-bildeoverlagNyeste-hover.png" class="latestNewsHover" alt="" style="width: 80%; position: absolute; bottom: 0px;">
@@ -192,7 +192,7 @@
 
         <!--* Artikklene -->
         <div class="gridContArticles" style="margin-top: 15vw;">
-            <div class="overskriftTekst"><b>Alle artikklene fra Bakka</b></div>
+            <div class="overskriftTekst"><b>Alle artikklene</b> fra Bakka</div>
 
             <div class="GridItemArtic pic"><div class="articBox pic">
                 <img src="" alt=""> <!--TODO Dette er bildet, OBS: Lag artikkelene til bildestørrelse -->
@@ -293,20 +293,20 @@
             <div class="overskriftTekst"><b>Kategorier</b></div>
             <div class="slideshowCont">
                 <div class="gridContKat" id="moveMeOnArrowClick">
-                    <a href="../bakka/pa-bakka.html" class="noLink"><div class="GridItemKat"><div class="katBox pic" onclick="location.href='../bakka/pa-bakka.html';" id="onKat">
+                    <a href="../bakka/pa-bakka.html" class="noLink"><div class="GridItemKat"><div class="katBox pic" id="onKat">
                         <img class="katBilde" src="../hovedBilder/-katBakkaBilde.png" alt="">
                         <img class="bakkaBilde katBilde" src="../hovedBilder/-katBakkaBildeoverlag.png" alt="">
                         <img class="bakkaBildeHover katBilde" src="../hovedBilder/-katBakkaBildeoverlag-hover.png" alt="">
                         <h1 class="katText katTextBakka">På Bakka</h1>
                     </div></div></a>
 
-                    <a href="../samfunn/katSamf.html" class="noLink"><div class="GridItemKat"><div class="katBox pic" onclick="location.href='../samfunn/katSamf.html';" id="sKat">
+                    <a href="../samfunn/katSamf.html" class="noLink"><div class="GridItemKat"><div class="katBox pic" id="sKat">
                         <img class="samfBilde katBilde" src="../hovedBilder/-katSamfBildeoverlag.png" alt="">
                         <img class="samfBildeHover katBilde" src="../hovedBilder/-katSamfBildeoverlag-hover.png" alt="">
                         <h1 class="katText katTextSamf">Samf. & Debatt</h1>
                     </div></div></a>
 
-                    <a href="../kreativt/katKreativt.html" class="noLink"><div class="GridItemKat"><div class="katBox pic" onclick="location.href='../kreativt/katKreativt.html';" id="kKat">
+                    <a href="../kreativt/katKreativt.html" class="noLink"><div class="GridItemKat"><div class="katBox pic" id="kKat">
                         <img class="kreativtBilde katBilde" src="../hovedBilder/-katKreativtBildeoverlag.png" alt="">
                         <img class="kreativtBildeHover katBilde" src="../hovedBilder/-katKreativtBildeoverlag-hover.png" alt="">
                         <h1 class="katText katTextKreativt">Kreativt</h1>
@@ -333,7 +333,7 @@
 
 
 
-        <a href="../malOgEks/malOgEks.html" class="noLink"><div class="malEksBox pic" onclick="location.href='../malOgEks/malOgEks.html'"> <!--TODO Sett en lenke -->
+        <a href="../malOgEks/malOgEks.html" class="noLink"><div class="malEksBox pic">
             <div class="overskriftTekst"><b>Maler & eksempler</b></div>
             <div class="hideContent pic">
                 <img src="" alt=""/>
