--- a/kreativt/katKreativt.html
+++ b/kreativt/katKreativt.html
@@ -151,7 +151,7 @@
 
         <!--* siste nytt -->
         <div class="latestNewsBox pic">
-            <div class="overskriftTekst"><b>Siste Kreativt nytt</b></div>
+            <div class="overskriftTekst"><b>Siste</b> Kreativt <b>nytt</b></div>
             <div class="latestNewsBox-hiddencontent pic">
                 <img src="../hovedBilder/pc/nyestArtikkelBildeoverlag/pc-graBildeoverlagNyeste.png" class="latestNewsOverlag" alt="">
                 <img src="../hovedBilder/pc/nyestArtikkelBildeoverlag/pc-bildeoverlagNyeste-hover.png" class="latestNewsHover" alt="" style="width: 80%; position: absolute; bottom: 0px;">
@@ -185,7 +185,7 @@
 
         <!--* Artikklene -->
         <div class="gridContArticles" style="margin-top: 15vw;">
-            <div class="overskriftTekst"><b>Alle artikklene om Kreativt</b></div>
+            <div class="overskriftTekst"><b>Alle artikklene</b> om Kreativt</div>
 
             <div class="GridItemArtic pic"><div class="articBox pic">
                 <img src="" alt=""> <!--TODO Dette er bildet, OBS: Lag artikkelene til bildestørrelse -->
