--- a/samfunn/katSamf.html
+++ b/samfunn/katSamf.html
@@ -82,7 +82,7 @@
 
 
 
-    <!-- HEADER -->
+    <!--* HEADER -->
     <div class="header fullWidth"> 
         <div class="headImg">
             <img src="../hovedBilder/pc/pc-paBakka-hovedbilde.png" style="height: 100%;" alt="">
